Remove remaining javax.xml.bind.DatatypeConverter usage from tests
The javax.xml.bind package was removed from the JDK in Java 11, so
TestBase failed to compile and the whole test suite could not be run on
JDK >= 11. Replace the only remaining usage with java.util.Base64, which
is available since Java 8 and therefore keeps the declared minimum Java
version unchanged.